After CMF 1.5.2

Bugs Fixed

    - Made sure FSDVTest always deletes its temporary folder on tearDown.
      (http://www.zope.org/Collectors/CMF/106)

    - Fix DefaultWorkflowDefinition bug on isActionSupported() for the
      keywargs support to reflect DCWorkflowDefinition changes. Add a
      test case for this definition as well.


CMF 1.5.2 (2005/07/17)

  Bugs Fixed

    - CMFCore/ActionInformation.py: Permissions of action categories starting
      with 'document' are now evaluated in the object context instead of the
      portal context. This should probably be generalized some more.

    - Added testing framework to suppress / examine output from warnings
      module and from zLOG.

    - CMFUid/UniqueIdGeneratorTool.py: Replaced the old BTree.Length.Length
      implementation by a simple counter. Using a BTree.Length.Length object
      as counter may have caused setting the same unique id to multiple 
      objects under high load. The tools counter gets automigrated on the 
      first access.

  Others

    - CMFCore/CMFBTreeFolder.py:  Moved here from Zope core's
      Products/BTreeFolder2;  conditional import, with module alias, into
      __init__.py, for compatibility with Zope 2.7;  2.8.0 has BTreeFolder2
      in the core (see http://www.zope.org/Collectors/Zope/1813).

CMF 1.5.2beta2 (2005/07/08)

  Features Added

    - CMFDefault/skins/zpt_generic/talkback_tree:  Add link to allow
      managers to delete replies (http://www.zope.org/Collectors/CMF/38).

  Bugs Fixed

    - CMFDefault.utils.parseHeadersBody:  use standard library's 'rfc822'
      module to parse metadata headers, to take advantage of better handling
      of edge cases.

    - CMFDefault.utils.formatRFC822Headers:  strip trailing blank line
      of multi-line value, to prevent premature halt of parsing.
      (http://www.zope.org/Collectors/CMF/230)

    - CMFCore.MembershipTool:  allow 'getMemberById' to crawl up the